Bug 167375: configuration changes needed for building on BSD/OS 5.0. The patch is contributed by lidl@pix.net. Modified files: configure configure.in _bsdi.h